--- a/new/main/templates/main/about.html
+++ b/new/main/templates/main/about.html
@@ -1,4 +1,6 @@
 {% extends 'main/base.html' %}
 {% block content %}
 	<h1>О нас</h1>
+	<img src="/main.magaz.jpg">
+	<p>В нашем интернет-магазине сладостей «Мармеладница.ру» мы предлагаем купить лишь самые лучшие сладости: изысканный испанский, французский, швейцарский шоколад, лучший мармелад (в том числе жевательный, желейные бобы, мармеладные мишки), удивительные конфеты, туррон, леденцы, драже, трюфели, нугу, батончики, ирис карамель от ведущих производителей Европы с безупречной, десятилетиями укрепляемой репутацией.</p>
 {% endblock %}
