--- a/new/main/templates/main/base.html
+++ b/new/main/templates/main/base.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<title>Yam</title>
-	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}main/style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Oswald&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: lightgrey">
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <a class="navbar-brand" href="#">Yam</a>
@@ -37,7 +36,7 @@
 	</header>
 	{% block content %}
 	{% endblock %}
-	<footer>
+	<footer style="background-color: #BCFFE8">
 		<p>Продуктовый Магазин</p>
 		<a href="about.html">О разработке</a>
 		<a href="https://vk.com/kate_megnik">Межникова Екатерина</a>
